...
  <string name="action_allowCameraAccess">Allow Camera Access</string>
  <string name="action_allowContacts">Allow Access to Contacts</string>
  <string name="action_allowPushNotifications">Allow Push Notifications</string>
  <string name="action_balance">Balance</string>
  <string name="action_buyKin">Buy Kin</string>
  <string name="action_buyMoreKin">Buy More Kin</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_cancelSend">Cancel Send</string>
  <string name="action_chat">Chat</string>
  <string name="action_collectCash">Collect This Cash</string>
  <string name="action_confirm">Confirm</string>
  <string name="action_connectToX">Connect to X</string>
  <string name="action_continue">Continue</string>
...
  <string name="action_joinWaitlist">Join the Waitlist</string>
  <string name="action_later">Later</string>
  <string name="action_learnBuyKin">Learn How to Buy Kin</string>
  <string name="action_learnSellKin">Learn How to Sell Kin</string>
  <string name="action_linkPhoneNumber">Link a Phone Number</string>
  <string name="action_logIn">Log In</string>
  <string name="action_logout">Log Out</string>
  <string name="action_messageGetCode">Message @getcode to Connect</string>
  <string name="action_mute">Mute</string>
  <string name="action_next">Next</string>
  <string name="action_noTryAgain">No, Try Again</string>
  <string name="action_notNow">Not Now</string>
  <string name="action_ok">OK</string>
...
