...
                    }
                } else {
                    BottomBarManager.showMessage(
                        BottomBarManager.BottomBarMessage(
                            title = context.getString(R.string.prompt_title_unlinkPhoneNumber),
                            subtitle = context.getString(R.string.prompt_description_unlinkPhoneNumber),
                            positiveText = "Yes",
                            negativeText = context.getString(R.string.action_cancel),
                            onPositive = viewModel::unlinkPhone,
                            onNegative = {}
                        )
                    )
                }
...
